tests/snapshots/run_wpt_conformance__coreml_identity_float16_1D_constant_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
identity.https.any.js identity float16 1D constant tensor, coreml
 Failed to build graph: coreml runtime failed: MLModel load failed: Failed to build the model execution plan using a model architecture file '<coreml-temp-model>' with error code: -14.

--- built graph ---
webnn_graph "graph" v2 {
  consts {
    operand_0: f16[24] @bytes([10, 54, 29, 187, 252, 72, 247, 71, 53, 196, 127, 195, 6, 193, 199, 69, 121, 196, 52, 200, 183, 195, 9, 70, 138, 72, 26, 71, 171, 61, 165, 197, 51, 193, 68, 199, 228, 200, 127, 69, 252, 200, 231, 198, 179, 193, 143, 66]);
  }

  nodes {
    [identityOutput] = identity(operand_0, label="");
  }

  outputs { identityOutput; }
}
