tests/snapshots/run_wpt_conformance__coreml_identity_float32_4D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "identity.https.any.js",
    "identity float32 4D tensor",
    "coreml",
    "PASS",
)
